Add to card gradient

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Visa Signature</title>
   <link href="css/main.css" rel="stylesheet">
   <link href="https://cutt.ly/ceqnzs1" rel="stylesheet">
+  <link href="./img/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
   <div class="mainScreen">
@@ -13,6 +14,11 @@
         <source src="img/videoBg.mp4" type="video/mp4">
       </video>
     </div>
+
+    <div class="mainScreen__video--gradient">
+
+    </div>
+
     <nav class="navbar">
       <div class="navbar__wrap">
         <div class="navbar__logo">
@@ -28,9 +34,64 @@
       <section class="mainScreen__titles">
         <h1 class="mainScreen__title">Visa Signature</h1>
         <h2 class="mainScreen__subtitle">Картка для <br>яскравих подорожей</h2>
-        <img src="img/visaCard.png" alt="Card visa" class="mainScreen__visaCard">
+        <div class="mainScreen__blockGradient">
+          <img src="img/visaCard.png" alt="Card visa" class="mainScreen__visaCard">
+          <div id="mainScreen__gradient" class="mainScreen__gradient">
+
+          </div>
+        </div>
       </section>
     </div>
   </div>
+
+  <div class="services">
+    <section class="services__section">
+      <h2>Планування подорожі</h2>
+      <span>Ретельна підготовка — запорука вдалої мандрівки</span>
+
+      <div class="service__wrap">
+        <div class="">
+          <div>
+            <a href="javascript: void(0)">
+
+            </a>
+          </div>
+          <div>
+
+          </div>
+          <div>
+            <a href="javascript: void(0)">
+
+            </a>
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <a href="javascript: void(0)">
+
+            </a>
+          </div>
+          <div>
+
+          </div>
+        </div>
+
+        <div>
+          <div>
+            <a href="javascript: void(0)">
+
+            </a>
+          </div>
+          <div>
+
+          </div>
+        </div>
+      </div>
+
+    </section>
+  </div>
+
+  <script src="js/index.js"></script>
 </body>
 </html>
