Created block with services

--- a/src/index.html
+++ b/src/index.html
@@ -46,49 +46,68 @@
 
   <div class="services">
     <section class="services__section">
-      <h2>Планування подорожі</h2>
-      <span>Ретельна підготовка — запорука вдалої мандрівки</span>
+      <h2 class="services__subtitle">Планування подорожі</h2>
+      <span class="services__subtitleAdvertising">Ретельна підготовка — запорука вдалої мандрівки</span>
 
-      <div class="service__wrap">
-        <div class="">
-          <div>
-            <a href="javascript: void(0)">
-
-            </a>
-          </div>
-          <div>
-
-          </div>
-          <div>
-            <a href="javascript: void(0)">
-
-            </a>
-          </div>
+      <div class="cards__wrap">
+        <div class="card__hotelCollection">
+          <a href="javascript: void(0)" class="card__link">
+            <img src="./img/vlhcLable.png" alt="" class="card__hotelCollection--img">
+            <h5 class="card__hotelCollection--subtitle">Visa Luxury Hotel collection</h5>
+            <p class="card__hotelCollection--text">Діє по всьому світу цілодобово й надає для вас глобальний сервіс інформаційної підтримки в телефонному режимі.</p>
+            <span class="card__hotelCollection--details">Подробнее</span>
+          </a>
         </div>
 
-        <div>
-          <div>
-            <a href="javascript: void(0)">
-
-            </a>
-          </div>
-          <div>
-
-          </div>
+        <div class="card__rentCar">
+          <a href="javascript: void(0)" class="card__link">
+            <img src="./img/carLable.png" alt="" class="card__rentCar--img">
+            <h5 class="card__rentCar--subtitle">Оренда авто</h5>
+            <p class="card__rentCar--text">Бронюйте автомобілі по всьому світу, оплачуйте карткою Visa Signature та отримайте знижку</p>
+            <span class="card__rentCar--details">Подробнее</span>
+          </a>
         </div>
 
-        <div>
-          <div>
-            <a href="javascript: void(0)">
+        <div class="card__conciergeService">
+          <a href="javascript: void(0)" class="service__link">
+            <img src="./img/visaLable.svg" alt="" class="card__conciergeService--img">
+            <h5 class="card__conciergeService--subtitle">Консьєрж-сервіс</h5>
+            <p class="card__conciergeService--text">Діє по всьому світу цілодобово й надає для вас глобальний сервіс інформаційної підтримки в телефонному режимі.</p>
+            <span>Подробнее</span>
+          </a>
+        </div>
 
-            </a>
-          </div>
-          <div>
+        <div class="card__orendaSafe">
+          <img src="./img/visaLable.svg" alt="" class="card__orendaSafe--img">
+          <h5 class="card__orendaSafe--subtitle">Оренда сейфу</h5>
+          <p class="card__orendaSafe--text">Орендуйте сейф зі знижкою 30 % для надійного зберігання важливих документів та цінних речей, доки ви за кордоном.</p>
+        </div>
 
-          </div>
+        <div class="card__personalManager">
+          <img src="./img/polygonLable.svg" alt="" class="card__personalManager--img">
+          <h5>Персональний менеджер</h5>
+          <p class="card__personalManager--text">Ваш фінансовий помічник, який завжди допоможе:
+          - здійснити банківські операції за вашим дорученням
+          - підготувати всі необхідні документи до вашого візиту в Банк
+          - надасть якісні консультації й підбере для вас найкращі умови
+          </p>
+        </div>
+
+        <div class="card__rentHotel">
+          <img src="./img/agodaLable.svg" alt="" class="card__rentHotel--img">
+          <h5 class="card__rentHotel--subtitle">Оренда готелю на agoda.com</h5>
+          <p class="card__rentHotel--text">Знижки у разі бронювання на <span class="card__rentHotel--link">agoda.com.</span> Знижка 12 % в більш ніж 985 тис. готелів по всьому світу</p>
         </div>
       </div>
 
+      <div class="card__travelInsurance">
+        <a href="javascript: void(0)" class="card__link">
+          <img src="./img/baggageLable.png" alt="" class="card__travelInsurance--img">
+          <h5 class="card__travelInsurance--subtitle">Повне страхування подорожі до 500 000 $</h5>
+          <p class="card__travelInsurance--text">Сума страхового покриття для власників карток Visa Signature</p>
+          <span class="card__travelInsurance--deteils">Подробнее</span>
+        </a>
+      </div>
     </section>
   </div>
 
