--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,11 @@
 
     <nav class="navbar">
       <div class="navbar__wrap">
+<!-- Class logo don't use -->
         <div class="navbar__logo">
           <img src="img/visaLogo.svg" alt="">
         </div>
-        <div>
+        <div class="navbar__buttons">
           <button class="navbar__burgerBtn"><img src="img/menuButton.svg" alt=""></button>
           <button class="navbar__order">Замовити картку</button>
         </div>
@@ -49,64 +50,72 @@
       <h2 class="services__subtitle">Планування подорожі</h2>
       <span class="services__subtitleAdvertising">Ретельна підготовка — запорука вдалої мандрівки</span>
 
-      <div class="cards__wrap">
-        <div class="card__hotelCollection">
-          <a href="javascript: void(0)" class="card__link">
-            <img src="./img/vlhcLable.png" alt="" class="card__hotelCollection--img">
-            <h5 class="card__hotelCollection--subtitle">Visa Luxury Hotel collection</h5>
-            <p class="card__hotelCollection--text">Діє по всьому світу цілодобово й надає для вас глобальний сервіс інформаційної підтримки в телефонному режимі.</p>
-            <span class="card__hotelCollection--details">Подробнее</span>
+      <div class="features">
+
+        <div class="features__column">
+          <a href="javascript: void(0)" class="feature__highlighted features__card features_indent">
+            <img src="./img/vlhcLable.png" alt="" class="features__vlhcLable--img">
+            <h5 class="features__subtitle">Visa Luxury Hotel collection</h5>
+            <p class="feature__highlighted">Діє по всьому світу цілодобово й надає для вас глобальний сервіс інформаційної підтримки в телефонному режимі.</p>
+            <span class="features__details">Подробнее</span>
+          </a>
+
+          <div class="features__card features_indent">
+            <div class="features__visaLable--wrap">
+              <img src="./img/visaLable.svg" alt="" class="features__visaLable--img">
+            </div>
+            <h5 class="features__subtitle">Оренда сейфу</h5>
+            <p class="feature__highlighted">Орендуйте сейф зі знижкою 30 % для надійного зберігання важливих документів та цінних речей, доки ви за кордоном.</p>
+          </div>
+
+          <a href="javascript: void(0)" class="feature__highlighted features__card features_indent features_yellow">
+            <img src="./img/baggageLable.png" alt="" class="features__baggageLable--img">
+            <h5 class="features__subtitle">Повне страхування <br>подорожі<br> до 500 000 $</h5>
+            <p class="feature__highlighted">Сума страхового покриття для власників карток Visa Signature.</p>
+            <span class="features__details features__details-color">Подробнее</span>
           </a>
         </div>
 
-        <div class="card__rentCar">
-          <a href="javascript: void(0)" class="card__link">
-            <img src="./img/carLable.png" alt="" class="card__rentCar--img">
-            <h5 class="card__rentCar--subtitle">Оренда авто</h5>
-            <p class="card__rentCar--text">Бронюйте автомобілі по всьому світу, оплачуйте карткою Visa Signature та отримайте знижку</p>
-            <span class="card__rentCar--details">Подробнее</span>
+        <div class="features__column features_relative features__column--center">
+          <a href="javascript: void(0)" class="feature__highlighted features__card features_indent features_blue">
+            <img src="./img/carLable.png" alt="" class="features__carLable--img">
+            <div class="features_carLable">
+              <h5 class="features__subtitle">Оренда авто</h5>
+              <p class="feature__highlighted">Бронюйте автомобілі по всьому світу, оплачуйте карткою Visa Signature та отримайте знижку.</p>
+              <span class="features__details features__details-color">Подробнее</span>
+            </div>
           </a>
+
+          <div class="features__card features_indent">
+            <div class="features__polygonLable--wrap">
+              <img src="./img/polygonLable.svg" alt="" class="features__polygonLable--img">
+            </div>
+            <h5 class="features__subtitle">Персональний менеджер</h5>
+            <p class="feature__highlighted">Ваш фінансовий помічник, який завжди допоможе:
+            - здійснити банківські операції за вашим дорученням.
+            - підготувати всі необхідні документи до вашого візиту в Банк.
+            - надасть якісні консультації й підбере для вас найкращі умови.
+            </p>
+          </div>
         </div>
 
-        <div class="card__conciergeService">
-          <a href="javascript: void(0)" class="service__link">
-            <img src="./img/visaLable.svg" alt="" class="card__conciergeService--img">
-            <h5 class="card__conciergeService--subtitle">Консьєрж-сервіс</h5>
-            <p class="card__conciergeService--text">Діє по всьому світу цілодобово й надає для вас глобальний сервіс інформаційної підтримки в телефонному режимі.</p>
-            <span>Подробнее</span>
+        <div class="features__column features__column--right">
+          <a href="javascript: void(0)" class="feature__highlighted features__card features_indent">
+            <div class="features__visaLable--wrap">
+              <img src="./img/visaLable.svg" alt="" class="features__visaLable--img">
+            </div>
+            <h5 class="features__subtitle">Консьєрж-сервіс</h5>
+            <p class="feature__highlighted">Діє по всьому світу цілодобово й надає для вас глобальний сервіс інформаційної підтримки в телефонному режимі.</p>
+            <span class="features__details">Подробнее</span>
           </a>
+
+          <div class="features__card features_indent">
+            <img src="./img/agodaLable.svg" alt="" class="features__agodaLable--img">
+            <h5 class="features__subtitle">Оренда готелю на agoda.com</h5>
+            <p class="feature__highlighted">Знижки у разі бронювання на <a href="agoda.com" class="features__link">agoda.com.</a> Знижка 12 % в більш ніж 985 тис. готелів по всьому світу.</p>
+          </div>
         </div>
 
-        <div class="card__orendaSafe">
-          <img src="./img/visaLable.svg" alt="" class="card__orendaSafe--img">
-          <h5 class="card__orendaSafe--subtitle">Оренда сейфу</h5>
-          <p class="card__orendaSafe--text">Орендуйте сейф зі знижкою 30 % для надійного зберігання важливих документів та цінних речей, доки ви за кордоном.</p>
-        </div>
-
-        <div class="card__personalManager">
-          <img src="./img/polygonLable.svg" alt="" class="card__personalManager--img">
-          <h5>Персональний менеджер</h5>
-          <p class="card__personalManager--text">Ваш фінансовий помічник, який завжди допоможе:
-          - здійснити банківські операції за вашим дорученням
-          - підготувати всі необхідні документи до вашого візиту в Банк
-          - надасть якісні консультації й підбере для вас найкращі умови
-          </p>
-        </div>
-
-        <div class="card__rentHotel">
-          <img src="./img/agodaLable.svg" alt="" class="card__rentHotel--img">
-          <h5 class="card__rentHotel--subtitle">Оренда готелю на agoda.com</h5>
-          <p class="card__rentHotel--text">Знижки у разі бронювання на <span class="card__rentHotel--link">agoda.com.</span> Знижка 12 % в більш ніж 985 тис. готелів по всьому світу</p>
-        </div>
-      </div>
-
-      <div class="card__travelInsurance">
-        <a href="javascript: void(0)" class="card__link">
-          <img src="./img/baggageLable.png" alt="" class="card__travelInsurance--img">
-          <h5 class="card__travelInsurance--subtitle">Повне страхування подорожі до 500 000 $</h5>
-          <p class="card__travelInsurance--text">Сума страхового покриття для власників карток Visa Signature</p>
-          <span class="card__travelInsurance--deteils">Подробнее</span>
-        </a>
       </div>
     </section>
   </div>
