--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,13 @@
       </video>
     </div>
 
-    <div class="mainScreen__video--gradient">
+    <div class="mainScreen__videoGradient">
 
     </div>
 
     <nav class="navbar">
       <div class="navbar__wrap">
-<!-- Class logo don't use -->
-        <div class="navbar__logo">
+        <div>
           <img src="img/visaLogo.svg" alt="">
         </div>
         <div class="navbar__buttons">
@@ -31,6 +30,7 @@
         </div>
       </div>
     </nav>
+
     <div class="mainScreen__content">
       <section class="mainScreen__titles">
         <h1 class="mainScreen__title">Visa Signature</h1>
